much needed changes

--- a/Documentation/Report/minimal_example.tex
+++ b/Documentation/Report/minimal_example.tex
@@ -9,14 +9,9 @@
 
 \begin{document}
 
-Name, date, Exercise X
+lmao
 
 \section*{Part a}
-
-Put your answer to part a here
-
-\section*{Part b}
-
-etc
+great project
 
 \end{document}
