--- a/Documentation/Report/index.tex
+++ b/Documentation/Report/index.tex
@@ -7,7 +7,7 @@
 \hypersetup{%
 	pdftitle={Title of your paper},				% Write title of your project
 	pdfkeywords={CFD, openFOAM, velocity, pressure},	% Write relevant keywords here
-	pdfauthor={Chirag Trivedi},					% Write your name (First author only)
+	pdfauthor={Terje Tybring Lindtveit},					% Write your name (First author only)
 }
 
 \JourName{TEP4545, Fluids Engineering}				% Journal/course name
@@ -25,11 +25,11 @@
 % Can also include multiple emails and use the command more than once for multiple corresponding authors,
 %      "Name\CorrespondingAuthor{write@to.him, write@to.her}"
 
-\SetAuthorBlock{Author Name 1\CorrespondingAuthor}
+\SetAuthorBlock{Terje Tybring Lindtveit\CorrespondingAuthor}
 	{Department of Energy and Process Engineering,\\
 	NTNU,\\
 	Trondheim 7491, Norway \\
-	email: \href{mailto:YourEmail@stud.ntnu.no}{YourEmail@stud.ntnu.no}}
+	email: \href{mailto:terjetl@stud.ntnu.no}{terjetl@stud.ntnu.no}}
 
 \SetAuthorBlock{Author Name 2}
 	{Department of Energy and Process Engineering,\\
@@ -43,11 +43,6 @@
 	Trondheim 7491, Norway \\
 	email: \href{mailto:YourEmail@stud.ntnu.no}{YourEmail@stud.ntnu.no}}
 
-\SetAuthorBlock{Author Name 4}
-	{Department of Energy and Process Engineering,\\
-	NTNU,\\
-	Trondheim 7491, Norway \\
-	email: \href{mailto:YourEmail@stud.ntnu.no}{YourEmail@stud.ntnu.no}}
 
 %%% Change to your paper title. Can insert line breaks if you wish (otherwise breaks are selected automatically).
 \title{Computational fluid dynamic analysis of flow over bluff body: Direct numerical simulation}
